--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,7 +7,6 @@ $color-text: #000000;
 $color-blue: #0057b8;
 $color-blue--lighter: #3fb3ee;
 $color-blue--hover: #044280;
-$color-orange: #fab283;
 $color-green: #79cc96;
 $color-white: #ffffff;
 $color-pink: #f1aeac;
@@ -80,7 +79,10 @@ body {
   .es-kv {
     &__left {
       text-align: center;
-      margin-block: 2em;
+      text-wrap: balance;
+      display: flex;
+      flex-direction: column;
+      gap: $padding-S;
     }
 
     &__right img {
@@ -88,7 +90,13 @@ body {
       object-fit: cover;
       object-position: center;
     }
-
+    &__packshot {
+      &__bg {
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
     &__logo {
       padding: $padding-S;
       max-width: 150px;
@@ -96,39 +104,101 @@ body {
     }
 
     &__title {
-      background-color: $color-green;
       color: $color-white;
       padding: $padding-S;
+      background-color: $color-pink;
+      &__p:first-of-type {
+        font-size: calc($fs-header * 1.2);
+      }
     }
 
     &__textWrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: $padding-M;
       padding: $padding-L;
+      font-size: calc($fs-base * 1.1);
     }
-
-    &__info {
-      background-color: $color-blue;
-      color: $color-white;
-      text-align: center;
-      padding: 1em 3em;
-      border-radius: 12px 0;
-      font-weight: $fw-bold;
-      max-width: max-content;
-      transition: all 200ms ease-in-out;
+    .es-desktop {
+      display: none;
     }
-
-    &__info:hover {
-      scale: 1.1;
+    @media (min-width: 576px) {
+      .es-mobile {
+        display: none;
+      }
+      .es-desktop {
+        display: block;
+      }
+      &__bg {
+        height: 400px;
+        &__img {
+          width: 200%;
+          height: 100%;
+          object-fit: cover;
+          object-position: right;
+        }
+      }
+      &__title {
+        background-color: transparent;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        gap: $padding-XS;
+        width: 95%;
+        max-width: 600px;
+        &__p {
+          background-color: $color-pink;
+          padding: $padding-XS;
+          border-radius: 0 $padding-XS 0 0;
+        }
+      }
     }
-
-    &__packshot {
-      padding: $padding-L $padding-S;
-      max-width: 80%;
-      margin: auto;
+    @media (min-width: 800px) {
+      display: flex;
+      position: relative;
+      z-index: 1;
+      &__left {
+        position: absolute;
+        width: 45%;
+        text-align: left;
+        transform: translateY(-50%);
+        top: 50%;
+        gap: $padding-M;
+        text-align: right;
+      }
+      &__bg {
+        height: max-content;
+      }
+      &__logo {
+        max-width: 120px;
+        margin: 0;
+        padding: 0;
+        padding-inline: $padding-S;
+      }
+      &__title {
+        width: 100%;
+        &__p {
+          padding-right: $padding-S;
+        }
+      }
+      &__textWrapper {
+        padding: 0;
+        padding-right: $padding-S;
+        text-align: right;
+      }
+    }
+    @media (min-width: 880px) {
+      &__left {
+        width: 42%;
+        gap: $padding-L;
+      }
+      &__logo {
+        max-width: 150px;
+      }
+      &__logo {
+        padding-left: $padding-L;
+      }
+      &__title__p,
+      &__texdtWrapper {
+        padding-right: $padding-L;
+      }
     }
   }
 
@@ -743,26 +813,6 @@ body {
           object-position: center;
         }
       }
-    }
-  }
-
-  @media (max-width: 720px) {
-    .es-kv__packshot img {
-      max-height: 300px;
-    }
-  }
-
-  @media (min-width: 576px) and (max-width: 719px) {
-    .es-kv__packshot {
-      display: none;
-    }
-  }
-
-  @media (min-width: 720px) {
-    .es-kv__logo {
-      margin: $padding-XL $padding-L;
-      padding: unset;
-      max-width: 120px;
     }
   }
 }
